<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images" >

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="42dp"
        android:text="@string/tv2"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv2"
        android:layout_marginTop="60dp"
        android:text="@string/tv3"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/bt7" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/bt6" />

    <Button
        android:id="@+id/btCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt8"
        android:layout_alignParentRight="true"
        android:text="@string/btCall" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt7"
        android:layout_alignParentLeft="true"
        android:text="@string/bt8" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt8"
        android:layout_alignParentLeft="true"
        android:src="@drawable/lp" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt6"
        android:layout_alignParentRight="true"
        android:src="@drawable/lp" />

    <TextView
        android:id="@+id/tvM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv1"
        android:textColor="#FFFFFF"
        
         />

    <TextView
        android:id="@+id/TvMF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv2"
        android:layout_marginTop="14dp"
        
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tvMuF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv3"
        android:layout_marginTop="14dp"
        
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tv1"
        android:textColor="#FFFFFF" />

</RelativeLayout>